1.2.6

 - When using Zope 2.9.10 and Plone 2.5.x, form validation would produce an
   Unauthorized error in fgvalidate_base. Fixed.
   (Tracker #233; Thanks, Jean-Pascal Houde)

 - Merge fixes for #225 from trunk. Add test. Fixes AttributeError: __len__ in 
   Plone 2.5.5 when using rating-scale field.
   (andrewb)

1.2.5

 - Integrate Portugese translation from Nuno Cruz.

 - Form submission should not be disabled when the form is locked for
   editing.

 - Fixed bug where 3rd-party additions to the list of types allowed
   within a form folder were purged on PFG reinstall.
   This closes http://plone.org/products/ploneformgen/issues/210
   (David Glick)

 - Fixed bug where install failed if portal_factory still references
   any types that no longer exist in portal_types.
   (David Glick)

1.2.4

 - Added Rating-Scale Field based on Titus Anderson's LikertField.
   Thanks to Titus and the University of Louisville.

 - Add delete capabilities to Andreas' record editor. Added escaping
   for multi-line fields. Guarded editing with ModifyPortalContent
   rather than the download permission.

 - Save adapter: stored records can now be edited through the Plone UI
   via the data saver's tabular view.
   The edit UI is pretty basic and provides only a text field per
   stored value. No fancy widgets, no validation.
   (Andreas Jung)

1.2.3

 - Created egg framework, moved svn trunk to
   collective/Products.PloneFormGen/trunk.

 - Some change around Plone 3.1 caused a problem where minor version
   updates of PFG would cause the formgen_tool to be created inside the
   portal_quickinstaller, thoroughly fouling it up. Yuck. Fixed.
   (Tracker #205; Thanks, Wouter Vanden Hove)

1.2.2

 - The PicklistWidget used to pick ThanksPage fields doesn't respect the 
   order of the value it's supplied, so let's always sort the values
   into the same order as the form. (Thanks, Lucia Colombo)

 - Adapt more public page templates to have Plone 3+ -specific versions.